--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -13,3 +13,10 @@
     <li>Date Added: @Model.DateAdded.ToShortDateString()</li>
     <li>Numbers in Stock: @Model.NumberInStock</li>
 </ul>
+
+@if (this.User.IsInRole("Owner") || this.User.IsInRole("StoreManager"))
+{
+    <p>
+        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit book</a>
+    </p>
+}
